# hass-eink-dashboard

./: .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  TRMNL.md  hacs.json  pyproject.toml  tox.ini
.agents/skills/implement-widget/: SKILL.md
.agents/skills/implement-widget-python/: SKILL.md
.agents/skills/implement-widget-tests/: SKILL.md
.github/workflows/: ci.yml  release.yml
custom_components/eink_dashboard/: __init__.py  battery.py  battery_sensor.py  conditions.py  config_flow.py  const.py  http.py  image.py  manifest.json  media_source.py  optimize.py  push.py  render.py  sensor.py  store.py  strings.json  svg_render.py
custom_components/eink_dashboard/frontend/: eink-dashboard-card.js  eink-dashboard-editor.js  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
custom_components/eink_dashboard/frontend/src/: eink-dashboard-card.ts  eink-dashboard-editor.ts  eink-widget-picker.ts  resize-math.ts
custom_components/eink_dashboard/frontend/src/types/: ha.d.ts
custom_components/eink_dashboard/frontend/test/: eink-dashboard-card.test.ts  eink-dashboard-editor.test.ts  eink-widget-picker.test.ts  resize-math.test.ts
custom_components/eink_dashboard/icons/svg/: LICENSE  README.md
custom_components/eink_dashboard/templates/: _macros.svg.j2  calendar.svg.j2  device_battery.svg.j2  entities.svg.j2  entity.svg.j2  frame.svg.j2  gauge.svg.j2  graph.svg.j2  heading.svg.j2  sensor.svg.j2  sensor_rows.svg.j2  separator.svg.j2  status_icons.svg.j2  text.svg.j2  tile.svg.j2  waste_schedule.svg.j2  weather.svg.j2
custom_components/eink_dashboard/translations/: en.json
custom_components/eink_dashboard/widgets/: __init__.py  _helpers.py  calendar.py  device_battery.py  entities.py  entity.py  frame.py  gauge.py  graph.py  heading.py  sensor.py  separator.py  tile.py  waste_schedule.py  weather.py
scripts/: _bootstrap.py  bench_render.py  build_dist.sh  build_icons.py  design_tool.py  render_weather_example.py
tests/: __init__.py  conftest.py  helpers.py  test_conditions.py  test_config_flow.py  test_http.py  test_icon_mapping.py  test_image.py  test_init.py  test_media_source.py  test_optimize.py  test_push.py  test_render.py  test_render_calendar.py  test_render_cross_widget.py  test_render_device_battery.py  test_render_entities.py  test_render_entity.py  test_render_frame.py  test_render_gauge.py  test_render_graph.py  test_render_heading.py  test_render_sensor_card.py  test_render_separator.py  test_render_tile.py  test_render_utils.py  test_render_waste_schedule.py  test_render_weather.py  test_sensor.py  test_store.py  test_svg_render.py  test_websocket.py
