[project]
name = "hass-eink-dashboard"
version = "0.1.0"
description = "Home Assistant custom component that renders e-ink dashboard images from entity state"
requires-python = ">=3.13"
license = "Apache-2.0"
dependencies = [
    "Pillow>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ty.src]
exclude = [
    "tests/",
    ".tmp/",
]

[[tool.ty.overrides]]
include = [
    "custom_components/eink_dashboard/image.py",
    "custom_components/eink_dashboard/http.py",
    "custom_components/eink_dashboard/store.py",
]
[tool.ty.overrides.rules]
unresolved-import = "ignore"
