[project]
name = "hass-eink-dashboard"
version = "0.1.0"
description = "Home Assistant custom component that renders e-ink dashboard images from entity state"
requires-python = ">=3.13"
license = "Apache-2.0"
dependencies = [
    "Pillow>=12.2",
    "resvg-py>=0.3.1",
]

[dependency-groups]
lint = ["ruff>=0.11"]
format = ["ruff>=0.11"]
typecheck = ["Pillow>=12.2.0", "aiohttp>=3.0", "Jinja2>=3.1", "ty"]
test = [
    "Pillow>=12.2.0",
    "aiohttp>=3.0",
    "Jinja2>=3.1",
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "voluptuous>=0.14",
]
interrogate = ["interrogate"]
dev = [
    {include-group = "lint"},
    {include-group = "typecheck"},
    {include-group = "test"},
    {include-group = "interrogate"},
    "cairosvg>=2.7",
]

[tool.ruff]
line-length = 79
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.interrogate]
fail-under = 80
ignore-init-method = true
ignore-magic = true

[tool.ty.src]
exclude = [
    "tests/",
    ".tmp/",
    "scripts/",
]

[[tool.ty.overrides]]
include = [
    "custom_components/eink_dashboard/__init__.py",
    "custom_components/eink_dashboard/config_flow.py",
    "custom_components/eink_dashboard/image.py",
    "custom_components/eink_dashboard/http.py",
    "custom_components/eink_dashboard/sensor.py",
    "custom_components/eink_dashboard/store.py",
]
[tool.ty.overrides.rules]
unresolved-import = "ignore"
